resources/applications/ingress/ingressroute-argocd.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - argocd
  routes:
    - match: HostSNI(`*`)
      services:
        - name: argocd-server
          port: 80
          terminationDelay: -1

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-web-argo
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.gabrielm.com.br`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argo.gabrielm.com.br`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: letsencrypt
